@@ -1,5 +1,6 @@
 1.0.2+
     add Devices|Settings|Auto-Mount|Mount Dirs option #548
+    proto hand keep %a for lxterminal urxvtc konsole gnome-terminal #552
 1.0.2   2015-06-02:
     toolbar redesign with design mode right-click ability
     add built-in toolbar items: Show Hidden, Show Thumbnails, Large Icons
